Fix address field dropdown being covered by other Pillar sections

--- a/grid-items/_grid-layout.scss
+++ b/grid-items/_grid-layout.scss
@@ -47,16 +47,16 @@
 
     // z-index fix below
 
-    #{variables.$select-address-bar} {
-      z-index: 4; // replicates the z-index value set by the browser, which causes this to stack above the panel
-    }
-
     #{variables.$select-title-bar},
     #main .mainbar::before,
     #{variables.$select-bookmark-bar},
     #{variables.$select-tab-bar},
     #{variables.$select-footer-has-status-bar} {
-      z-index: 4; // makes the entire Pillar stack on top of the panel, and not just the address bar
+      z-index: 4; // replicates the z-index value set for the address bar by the browser. Makes the entire Pillar stack on top of the panel
+    }
+
+    #{variables.$select-address-bar} {
+      z-index: 5; // prevents the address field dropdown from being stacked under other Pillar sections (e.g. bookmarks bar & tab bar)
     }
 
     // Borders below
